@@ -158,7 +158,7 @@ void server_spawn(struct thread_Settings *thread) {
 static void clientside_client_basic (struct thread_Settings *thread, Client *theClient) {
     setTransferID(thread, 0);
     SockAddr_remoteAddr(thread);
-    theClient->my_connect();
+    theClient->my_connect(1);
 #ifdef HAVE_THREAD_DEBUG
     thread_debug("Client spawn thread basic (sock=%d)", thread->mSock);
 #endif
@@ -179,7 +179,7 @@ static void clientside_client_basic (struct thread_Settings *thread, Client *the
 static void clientside_client_reverse (struct thread_Settings *thread, Client *theClient) {
     setTransferID(thread, 0);
     SockAddr_remoteAddr(thread);
-    theClient->my_connect();
+    theClient->my_connect(1);
 #ifdef HAVE_THREAD_DEBUG
     thread_debug("Client spawn thread reverse (sock=%d)", thread->mSock);
 #endif
@@ -223,7 +223,7 @@ static void clientside_client_fullduplex (struct thread_Settings *thread, Client
     Settings_Copy(thread, &reverse_client, 0);
     assert(reverse_client != NULL);
     setTransferID(reverse_client, 1);
-    theClient->my_connect();
+    theClient->my_connect(1);
 #ifdef HAVE_THREAD_DEBUG
     thread_debug("Client spawn thread fullduplex (sock=%d)", thread->mSock);
 #endif
@@ -271,7 +271,7 @@ static void serverside_client_bidir (struct thread_Settings *thread, Client *the
     SockAddr_remoteAddr(thread);
     unsetNoSettReport(thread);
     setReport(thread);
-    theClient->my_connect();
+    theClient->my_connect(1);
     if (theClient->isConnected()) {
 	Iperf_push_host(&thread->peer, thread);
 	if (theClient->StartSynch() != -1) {
